Updates based on Francis' feedback

--- a/USRA Presentation/presentation.tex
+++ b/USRA Presentation/presentation.tex
@@ -7,7 +7,7 @@
 
 
 
-\title{Hamiltonian fluid dynamics and stability}
+\title{Hamiltonian fluid dynamics and hydrodynamic stability}
 \author{James Hawley}
 \date{August 14, 2015}
 \institute{University of Waterloo}
@@ -24,7 +24,7 @@
 			\tableofcontents
 		\end{frame}
 
-	\section{Hamiltonian Dynamics}
+	\section{Hamiltonian Fluid Dynamics}
 		\begin{frame}[t]{Classical Mechanics}
 			\begin{columns}
 				\begin{column}{0.5\textwidth}
@@ -73,7 +73,7 @@
 				\item[]<5-> $$\mathbf{q}_t = \mathbf{J}\frac{\delta \mathcal{H}}{\delta \mathbf{q}}$$
 			\end{itemize}
 		\end{frame}
-		\begin{frame}[t]{Derivatives}
+		\begin{frame}[t]{Variational Derivatives}
 			\begin{itemize}
 				\item[]<2->$$ \mathcal{F}(\mathbf{q}) = \int_\Omega F(\mathbf{q}) \, d\mathbf{x} $$
 				\item[]<3->$$ \lim_{\epsilon \rightarrow 0} \frac{\partial}{\partial \epsilon}\mathcal{F}(\mathbf{q} + \epsilon\delta\mathbf{q}) \equiv \left< \frac{\delta \mathcal{F}}{\delta \mathbf{q}}, \delta\mathbf{q} \right> \equiv \int_\Omega \frac{\delta \mathcal{F}}{\delta \mathbf{q}} \delta\mathbf{q} \, d\mathbf{x} $$
@@ -90,7 +90,7 @@
 				\end{align*}
 		\end{frame}
 
-	\section{Stability}
+	\section{Stability Theory}
 		\subsection{Quasigeostrophic Model}
 			\begin{frame}[t]{Quasigeostrophic Model}
 				\begin{center}
