Updated presentation and images

--- a/USRA Presentation/presentation.tex
+++ b/USRA Presentation/presentation.tex
@@ -25,6 +25,7 @@
 		\end{frame}
 
 	\section{Hamiltonian Fluid Dynamics}
+	\setcounter{subsection}{1}
 		\begin{frame}[t]{Classical Mechanics}
 			\begin{columns}
 				\begin{column}{0.5\textwidth}
