--- a/Notes/hamiltonianQG.tex
+++ b/Notes/hamiltonianQG.tex
@@ -32,7 +32,7 @@
 
     The one-layer QG model can be written as,
     $$
-    \partial_t q + J(\psi, q) = 0,
+    \partial_t q + J(\psi, q + \beta y) = 0,
     $$
     with the following potential vorticity (PV) relation
     $$
@@ -45,15 +45,15 @@
     $$
     The canonical matrix is
     $$
-    \mathbf{J} = -J(q,\cdot)
+    \mathbf{J} = -J(q + \beta y,\cdot)
     $$
     with the Casimirs being functions of the PV,
     $$
-    \mathcal{C} = \iint C(q) \, dA,
+    \mathcal{C} = \iint C(q + \beta y) \, dA,
     $$
     where $C(q)$ is an arbitrary function. From this we form the constrained Hamiltonian,
     \begin{equation}
-        \mathcal{H} = \iint  \frac12 \vec\nabla\psi \cdot \vec\nabla\psi + \frac12 \frac{f_0^2}{g H} \psi^2 + C(q) \, dA
+        \mathcal{H} = \iint  \frac12 \vec\nabla\psi \cdot \vec\nabla\psi + \frac12 \frac{f_0^2}{g H} \psi^2 + C(q + \beta y) \, dA
         \label{eqn:qg_ol_h}
     \end{equation}
 
@@ -61,13 +61,13 @@
         To compute the steady states we must first the first variational derivative of the above functional:
         \begin{align*}
             \delta \mathcal{H}
-            & = \iint \vec\nabla\psi \cdot \vec\nabla \delta \psi + \frac{f_0^2}{g H} \psi \delta \psi + C'(q) \delta q \, dA, \\
-            & = \iint -\psi \left[ \nabla^2 \delta \psi - \frac{f_0^2}{g H} \delta \psi \right]  + C'(q) \delta q \, dA, \\
-            & = \iint \left[ - \psi + C'(q) \right]  \delta q  \, dA.
+            & = \iint \vec\nabla\psi \cdot \vec\nabla \delta \psi + \frac{f_0^2}{g H} \psi \delta \psi + C'(q + \beta y) \delta q \, dA, \\
+            & = \iint -\psi \left[ \nabla^2 \delta \psi - \frac{f_0^2}{g H} \delta \psi \right]  + C'(q + \beta y) \delta q \, dA, \\
+            & = \iint \left[ - \psi + C'(q + \beta y) \right]  \delta q  \, dA.
         \end{align*}
         From here we find that the steady solutions, which have a zero first variational derivative, must satisfy the following,
         $$
-        \psi_s = C'(q_s).
+        \psi_s = C'(q_s + \beta y).
         $$
         Here, and throughout, we use a subscript s to denote steady solution.
     \end{subsection}
@@ -76,18 +76,18 @@
       Similarly, we compute the second variational derivative,
       \begin{align*}
           \delta^2 \mathcal{H}
-          & = \iint \left[ - \psi + C'(q) \right]  \delta^2 q  - \delta \psi \delta q +  C''(q) (\delta q)^2  \, dA, \\
-          & = \iint \left[ - \psi + C'(q) \right]  \delta^2 q
+          & = \iint \left[ - \psi + C'(q + \beta y) \right]  \delta^2 q  - \delta \psi \delta q +  C''(q + \beta y) (\delta q)^2  \, dA, \\
+          & = \iint \left[ - \psi + C'(q + \beta y) \right]  \delta^2 q
           + \vec\nabla \delta \psi \cdot \vec \nabla \delta \psi
-          +\frac{f_0^2}{gH} (\delta \psi)^2+  C''(q) (\delta q)^2  \, dA,
+          +\frac{f_0^2}{gH} (\delta \psi)^2+  C''(q + \beta y) (\delta q)^2  \, dA,
       \end{align*}
       after integrating by parts.
 
       Next, we evaluate the second variation at an arbitrary steady solution,
       \begin{align*}
           \delta^2 \mathcal{H}_s
-          & = \iint \vec\nabla \delta \psi \cdot \vec \nabla \delta \psi + \frac{f_0^2}{gH} (\delta \psi)^2+  C''(q_s) (\delta q)^2  \, dA \\
-          & = \delta^2 H_s + \iint C''(q_s) (\delta q)^2  \, dA.
+          & = \iint \vec\nabla \delta \psi \cdot \vec \nabla \delta \psi + \frac{f_0^2}{gH} (\delta \psi)^2+  C''(q_s + \beta y) (\delta q)^2  \, dA \\
+          & = \delta^2 H_s + \iint C''(q_s + \beta y) (\delta q)^2  \, dA.
       \end{align*}
       Note that the $\delta^2 H_s$ term is positive definite and the Casimir term is sign definite.
     \end{subsection}
@@ -97,25 +97,22 @@
         \begin{subsubsection}{First Theorem (Positive Definiteness)}
             The first theorem is the easiest and corresponds to showing where the second variation is positive definite.  It is readily seen that this occurs when
             $$
-            C''(q_s) > 0.
+            C''(q_s + \beta y) > 0.
             $$
 
-            So for any steady flow that satisfies $\psi_s = C'(q_s)$ and the inequality above, we have a linearly stable flow.
+            So for any steady flow that satisfies $\psi_s = C'(q_s + \beta y)$ and the inequality above, we have a linearly stable flow.
 
             As an example of flows one may have examined before, if we assume that the steady solution only depends on latitude, $y$, then $\Psi = \Psi(y)$, and we can differentiate our equation that defines the steady state to obtain,
             $$
-            U_s = -C''(q_s) \frac{dq_s}{dy} = C''(q_s) \left[ \frac{d^2 U_s}{dy^2} - \frac{f_0^2}{gH} U_s \right]
+            U_s = -C''(q_s + \beta y) \left(\frac{dq_s}{dy} + \beta \right)
             $$
             where we used the fact that $U_s = - \frac{d \Psi_s}{dy}$.
 
             If we require that $C'' > 0$, then this is equivalent to (assuming the PV is not zero)
             $$
-            -\frac{U_s}{\frac{dQ_s}{dy}} = \frac{U_s}{\left[ \frac{d^2 U_s}{dy^2} - \frac{f_0^2}{gH} U_s\right]} > 0.
+            U_s \left(\frac{d Q_s}{dy} + \beta \right) < 0.
             $$
-            Since we are only concerned with the signs this can be rewritten as,
-            $$
-            U_s \frac{d Q_s}{dy} < 0.
-            $$
+            since we are only concerned with the signs.
         \end{subsubsection}
 
         \begin{subsubsection}{Second Theorem (Negative Definiteness)}
@@ -134,22 +131,15 @@
             Thus we have
             \begin{align*}
                 \delta^2\mathcal{H}_s
-                &= \iint \vec\nabla \delta \psi \cdot \vec \nabla \delta \psi + \frac{f_0^2}{gH} (\delta \psi)^2+  C''(q_s) (\delta q)^2  \, dA \\
-                &\le \iint \frac{1}{\lambda_{min}}(\nabla^2\delta\psi)^2 + \frac{f_0^2}{gH} (\delta \psi)^2+  C''(q_s) (\delta q)^2  \, dA \\
-                %&= \iint (\nabla^2 \delta\psi)^2\left[ \frac1\lambda_{min} + C''(q_s) \right] + (\delta\psi \nabla^2\delta\psi)\left[ -\frac{2f_0^2}{gH}C''(q_s) \right] \\
-                %&\quad + (\delta\psi)^2\left[ \frac{f_0^2}{gH} + (\frac{f_0^2}{gH})^2 + C''(q_s) \right] \, dA
+                &= \iint \vec\nabla \delta \psi \cdot \vec \nabla \delta \psi + \frac{f_0^2}{gH} (\delta \psi)^2+  C''(q_s + \beta y) (\delta q)^2  \, dA \\
+                &\le \iint \frac{1}{\lambda_{min}}(\nabla^2\delta\psi)^2 + \frac{f_0^2}{gH} (\delta \psi)^2+  C''(q_s + \beta y) (\delta q)^2  \, dA \\
             \end{align*}
             For $\delta^2\mathcal{H}$ to be negative definite, the integrand must be negative everywhere. By factoring this homogeneous polynomial, we find:
             \begin{align*}
-                C''(q_s) < -\frac{\frac1\lambda_{min}(\nabla^2\delta\psi)^2 + \frac{f_0^2}{gH}(\delta\psi)^2}{(\delta q)^2}
+                C''(q_s + \beta y) < -\frac{\frac1\lambda_{min}(\nabla^2\delta\psi)^2 + \frac{f_0^2}{gH}(\delta\psi)^2}{(\delta q)^2}
             \end{align*}
             The value of $\lambda_{min}$ will depend on the geometry of the domain. For example, two commonly used domains are the doubly periodic rectangle and an infinite channel in $x$.
             It can be shown that $\lambda_{min} = 4\pi^2(\frac1{L_x^2} + \frac1{L_y^2})$ for the doubly periodic boundary, and $\lambda_{min} = \frac{\pi^2}{W^2}$ for the channel.
-            %\begin{align*}
-            %    C''(q_s) &< \frac{(\frac{f_0^2}{gH})^2 \lambda y^2 + \frac{f_0^2}{gH} \lambda y^2 + x^2}{\lambda(\frac{2f_0^2}{gH}xy - y^2 - x^2)} \;&\text{when}\; 0 < -\frac{2f_0^2}{gH}xy + x^2 + y^2 \\
-            %    C''(q_s) &> \frac{(\frac{f_0^2}{gH})^2 \lambda y^2 + \frac{f_0^2}{gH} \lambda y^2 + x^2}{\lambda(\frac{2f_0^2}{gH}xy - y^2 - x^2)} \;&\text{when}\; 0 > -\frac{2f_0^2}{gH}xy + x^2 + y^2 \\
-            %    &\text{no restrictions on } C''(q_s) \;&\text{when}\; \frac{2f_0^2}{gH}xy = x^2 + y^2
-            %\end{align*}
         \end{subsubsection}
     \end{subsection}
 
@@ -171,12 +161,14 @@
         \begin{align*}
             \mathcal{N}(\delta q)
             &= \mathcal{H}(q_s + \delta q) - \mathcal{H}(q_s) \\
-            &= \iint  \frac12 \vec\nabla(\psi_s + \delta \psi) \cdot \vec\nabla(\psi_s + \delta \psi) + \frac12 \frac{f_0^2}{g H} (\psi_s + \delta \psi)^2 + C(q_s + \delta q) \, dA \\
-            &\quad - \iint  \frac12 \vec\nabla\psi_s \cdot \vec\nabla\psi_s + \frac12 \frac{f_0^2}{g H} \psi_s^2 + C(q_s) \, dA \\
-            &= \iint \frac12 \vec\nabla\delta\psi \cdot \vec\nabla\delta\psi + \frac12 \frac{f_0^2}{g H} (\delta \psi)^2 + \vec\nabla\psi_s \cdot \vec\nabla\delta\psi + \frac12 \frac{f_0^2}{g H} \psi_s\delta\psi + C(q_s + \delta q) - C(q_s) \, dA \\
-            &= \iint -\psi_s \left[ \nabla^2\delta\psi - \frac12 \frac{f_0^2}{g H} \delta\psi \right] + \frac12 \vec\nabla\delta\psi \cdot \vec\nabla\delta\psi + \frac12 \frac{f_0^2}{g H}(\delta\psi)^2 + C(q_s + \delta q) - C(q_s) \, dA \\
-            &= \iint \frac12 \vec\nabla\delta\psi \cdot \vec\nabla\delta\psi + \frac12 \frac{f_0^2}{g H}(\delta \psi)^2 + C(q_s + \delta q) - C(q_s) -C'(q_s)\delta q\, dA \\
-            &= \frac12 \delta^2 H_s + \iint C(q_s + \delta q) - C(q_s) -C'(q_s)\delta q\, dA
+            &= \iint  \frac12 \vec\nabla(\psi_s + \delta \psi) \cdot \vec\nabla(\psi_s + \delta \psi) + \frac12 \frac{f_0^2}{g H} (\psi_s + \delta \psi)^2 + C(q_s + \beta y + \delta q) \, dA \\
+            &\quad - \iint  \frac12 \vec\nabla\psi_s \cdot \vec\nabla\psi_s + \frac12 \frac{f_0^2}{g H} \psi_s^2 + C(q_s + \beta y) \, dA \\
+            &= \iint \frac12 \vec\nabla\delta\psi \cdot \vec\nabla\delta\psi + \frac12 \frac{f_0^2}{g H} (\delta \psi)^2 + \vec\nabla\psi_s \cdot \vec\nabla\delta\psi + \frac12 \frac{f_0^2}{g H} \psi_s\delta\psi \\
+            &\quad + C(q_s + \beta y + \delta q) - C(q_s + \beta y) \, dA \\
+            &= \iint -\psi_s \left[ \nabla^2\delta\psi - \frac12 \frac{f_0^2}{g H} \delta\psi \right] + \frac12 \vec\nabla\delta\psi \cdot \vec\nabla\delta\psi + \frac12 \frac{f_0^2}{g H}(\delta\psi)^2 \\
+            &\quad + C(q_s + \beta y + \delta q) - C(q_s + \beta y) \, dA \\
+            &= \iint \frac12 \vec\nabla\delta\psi \cdot \vec\nabla\delta\psi + \frac12 \frac{f_0^2}{g H}(\delta \psi)^2 + C(q_s + \beta y + \delta q) - C(q_s + \beta y) -C'(q_s + \beta y)\delta q\, dA \\
+            &= \frac12 \delta^2 H_s + \iint C(q_s + \beta y + \delta q) - C(q_s + \beta y) -C'(q_s + \beta y)\delta q\, dA
         \end{align*}
         where $H_s$ is the unconstrained Hamiltonian evaluated at the steady state, defined at the beginning of this section.
     \end{subsection}
@@ -189,7 +181,7 @@
 
     The two-layer QG model can be written as,
     $$
-    \partial_t q_i + J(\psi_i, q_i) = 0,
+    \partial_t q_i + J(\psi_i, q_i + \beta y) = 0,
     $$
     for $i=1,2$ where the PV relations are given by:
 
@@ -228,9 +220,9 @@
     \begin{subsection}{Hamiltonian}
         To derive an equation for the energy we must multiply the evolution equation by $\psi_i$ for each $i$ and then sum up over the different layers,
         \begin{align*}
-            0 &= \iint \psi_1 \partial_t q_1 + \psi_2 \partial_t q_2 + \psi_1 J(\psi_1, q_1) + \psi_2 J(\psi_2, q_2) \, dA \\
-            &= \iint \psi_1 \partial_t q_1 + \psi_2 \partial_t q_2 + \frac12 J(\psi_1^2, q_1) + \frac12 J(\psi_2^2, q_2) \, dA \\
-            &= \iint \sum_i \left[\partial_t(q_i \psi_i) - q_i \partial_t\psi_i \right] + \frac12 J(\psi_1^2, q_1) + \frac12 J(\psi_2^2, q_2) \, dA \\
+            0 &= \iint \psi_1 \partial_t q_1 + \psi_2 \partial_t q_2 + \psi_1 J(\psi_1, q_1 + \beta y) + \psi_2 J(\psi_2, q_2 + \beta y) \, dA \\
+            &= \iint \psi_1 \partial_t q_1 + \psi_2 \partial_t q_2 + \frac12 J(\psi_1^2, q_1 + \beta y) + \frac12 J(\psi_2^2, q_2 + \beta y) \, dA \\
+            &= \iint \sum_i \left[\partial_t(q_i \psi_i) - q_i \partial_t\psi_i \right] + \frac12 J(\psi_1^2, q_1 + \beta y) + \frac12 J(\psi_2^2, q_2 + \beta y) \, dA \\
             &= \iint \sum_i \left[\partial_t(q_i \psi_i) - q_i \partial_t\psi_i \right] \, dA \\
             &= \iint \sum_i \partial_t \left (\frac{1}{\alpha_i}\psi_i \nabla^2 \psi_i - \psi_i^2 + \psi_i\psi_{j\ne i} \right) \\
             &\quad - \left( \frac{1}{\alpha_i} \psi_{it} \nabla^2 \psi_i - \psi_i \psi_{it} + \psi_{j \ne i} \psi_{it} \right) \, dA \\
@@ -251,17 +243,17 @@
         The canonical matrix is
         $$
         \mathbf{J} = \left[\begin{array}{cc}
-        -J(q_1, \cdot) & \\
-        & -J(q_2, \cdot)
+        -J(q_1 + \beta y, \cdot) & \\
+        & -J(q_2 + \beta y, \cdot)
         \end{array}\right]
         $$
         with the Casimirs being functions of the PV,
         $$
-        \mathcal{C}_i = \iint C_i(q_i) \, dA
+        \mathcal{C}_i = \iint C_i(q_i + \beta y) \, dA
         $$
         From this we form the constrained Hamiltonian
         \begin{equation}
-            \mathcal{H} = \frac12 \iint \sum_{i=1}^2 \left[ \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \psi_i + 2C_i(q_i) \right]+ (\psi_1 - \psi_2)^2 \, dA
+            \mathcal{H} = \frac12 \iint \sum_{i=1}^2 \left[ \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \psi_i + 2C_i(q_i + \beta y) \right]+ (\psi_1 - \psi_2)^2 \, dA
             \label{eqn:qg_tl_h}
         \end{equation}
 
@@ -278,10 +270,10 @@
 
     \begin{subsection}{First Variation}
         \begin{align*}
-            \delta \mathcal{H} &= \delta \frac12 \iint \sum_{i=1}^2 \left[ \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \psi_i + 2C_i(q_i) \right]+ (\psi_1 - \psi_2)^2 \, dA \\
-            &= \iint \sum_{i=1}^2 \left[ \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \delta\psi_i + C'_i(q_i) \delta q_i \right]+ (\psi_1 - \psi_2)(\delta \psi_1 - \delta \psi_2) \, dA \\
-            &= \iint \sum_{i=1}^2 \left[ -\frac{1}{\alpha_i} \psi_i \nabla^2 \delta\psi_i + C'_i(q_i) \delta q_i - \psi_i(\delta \psi_i - \delta \psi_{j \ne i}) \right] \, dA \\
-            &= \iint \sum_{i=1}^2 (-\psi_i + C'_i(q_i)) \delta q_i\, dA \\
+            \delta \mathcal{H} &= \delta \frac12 \iint \sum_{i=1}^2 \left[ \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \psi_i + 2C_i(q_i + \beta y) \right]+ (\psi_1 - \psi_2)^2 \, dA \\
+            &= \iint \sum_{i=1}^2 \left[ \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \delta\psi_i + C'_i(q_i + \beta y) \delta q_i \right]+ (\psi_1 - \psi_2)(\delta \psi_1 - \delta \psi_2) \, dA \\
+            &= \iint \sum_{i=1}^2 \left[ -\frac{1}{\alpha_i} \psi_i \nabla^2 \delta\psi_i + C'_i(q_i + \beta y) \delta q_i - \psi_i(\delta \psi_i - \delta \psi_{j \ne i}) \right] \, dA \\
+            &= \iint \sum_{i=1}^2 (-\psi_i + C'_i(q_i + \beta y)) \delta q_i\, dA \\
         \end{align*}
 
         Since $\delta \mathcal{H} = 0$ for steady solutions, and $q_1$ and $q_2$ are independent coordinates, we have that in vector form
@@ -293,43 +285,41 @@
             \end{array}\right]
             =
             \left[\begin{array}{c}
-            C'_1(q_{1s}) \\
-            C'_2(q_{2s})
+            C'_1(q_{1s} + \beta y) \\
+            C'_2(q_{2s} + \beta y)
             \end{array}\right]
-            =
-            \vec C'(\vec q_s)
         \end{equation}
     \end{subsection}
 
     \begin{subsection}{Second Variation}
         Like the single layer model, the second variation for the two-layer model is
         \begin{align*}
-            \delta^2 \mathcal{H} &= \iint \sum_i \left[ - \psi_i + C'_i(q_i) \right]  \delta^2 q_i  - \delta \psi_i \delta q_i +  C''_i(q_i) (\delta q_i)^2  \, dA \\
-            \delta^2 \mathcal{H}_s &= \iint \sum_i \left[ - \psi_{is} + C'_i(q_{is}) \right]  \delta^2 q_i  - \delta \psi_i \delta q_i +  C''_i(q_{is}) (\delta q_i)^2  \, dA \\
-            &= \iint \sum_i - \delta \psi_i \delta q_i +  C''_i(q_{is}) (\delta q_i)^2  \, dA \\
-            &= \iint \sum_i - \delta \psi_i \left( \frac{1}{\alpha_i} \nabla^2 \delta \psi_i - \delta\psi_i + \delta\psi_{j \ne i} \right) +  C''_i(q_{is}) (\delta q_i)^2  \, dA \\
-            &= \iint \sum_i \left[ \frac{1}{\alpha_i} \vec\nabla\delta\psi_i \cdot \vec\nabla\delta\psi_i + (\delta\psi_i)^2 + C''_i(q_{is}) (\delta q_i)^2 \right]  - 2\delta\psi_1\delta\psi_2 \, dA \\
-            &= \iint \sum_i \left[ \frac{1}{\alpha_i} \vec\nabla\delta\psi_i \cdot \vec\nabla\delta\psi_i + C''_i(q_{is}) (\delta q_i)^2 \right]+ (\delta\psi_1 - \delta\psi_2)^2 \, dA \\
-            &= \delta^2 H_s + \iint \sum_i C''_i(q_{is})(\delta q_i)^2 \, dA \\
+            \delta^2 \mathcal{H} &= \iint \sum_i \left[ - \psi_i + C'_i(q_i + \beta y) \right]  \delta^2 q_i  - \delta \psi_i \delta q_i +  C''_i(q_i + \beta y) (\delta q_i)^2  \, dA \\
+            \delta^2 \mathcal{H}_s &= \iint \sum_i \left[ - \psi_{is} + C'_i(q_{is} + \beta y) \right]  \delta^2 q_i  - \delta \psi_i \delta q_i +  C''_i(q_{is} + \beta y) (\delta q_i)^2  \, dA \\
+            &= \iint \sum_i - \delta \psi_i \delta q_i +  C''_i(q_{is} + \beta y) (\delta q_i)^2  \, dA \\
+            &= \iint \sum_i - \delta \psi_i \left( \frac{1}{\alpha_i} \nabla^2 \delta \psi_i - \delta\psi_i + \delta\psi_{j \ne i} \right) +  C''_i(q_{is} + \beta y) (\delta q_i)^2  \, dA \\
+            &= \iint \sum_i \left[ \frac{1}{\alpha_i} \vec\nabla\delta\psi_i \cdot \vec\nabla\delta\psi_i + (\delta\psi_i)^2 + C''_i(q_{is} + \beta y) (\delta q_i)^2 \right]  - 2\delta\psi_1\delta\psi_2 \, dA \\
+            &= \iint \sum_i \left[ \frac{1}{\alpha_i} \vec\nabla\delta\psi_i \cdot \vec\nabla\delta\psi_i + C''_i(q_{is} + \beta y) (\delta q_i)^2 \right]+ (\delta\psi_1 - \delta\psi_2)^2 \, dA \\
+            &= \delta^2 H_s + \iint \sum_i C''_i(q_{is} + \beta y)(\delta q_i)^2 \, dA \\
         \end{align*}
 
-        The $\delta^2 H_s$ term is clearly positive definite, while the $C''_i(q_{is})$ term is sign definite. Like in the single-layer case, the definiteness of the second variation depends on the definiteness of the Casimirs.
+        The $\delta^2 H_s$ term is clearly positive definite, while the $C''_i(q_{is} + \beta y)$ term is sign definite. Like in the single-layer case, the definiteness of the second variation depends on the definiteness of the Casimirs.
     \end{subsection}
 
     \begin{subsection}{Linear Stability Theorems}
         \begin{subsubsection}{First Theorem}
             The first theorem proceeds exactly like it did for the one-layer case. We require the second variation to be positive definite, so
             $$
-            C''_i(q_{is}) > 0, \quad i=1,2
+            C''_i(q_{is} + \beta y) > 0, \quad i=1,2
             $$
 
             If we assume that the steady solution only depends on latitude, $y$, then $\Psi_i = \Psi_i(y)$, and we can differentiate our equation that defines the steady state to obtain
             $$
-            U_{is} = -C''_i(q_{is}) \frac{dq_{is}}{dy}
+            U_{is} = -C''_i(q_{is} + \beta y) \frac{dq_{is}}{dy}
             $$
             or succinctly,
             $$
-            U_{is} \frac{d Q_{is}}{dy} < 0, \quad i=1,2
+            U_{is} \left(\frac{d Q_{is}}{dy} + \beta \right) < 0, \quad i=1,2
             $$
         \end{subsubsection}
         \begin{subsubsection}{Second Theorem}
@@ -342,20 +332,20 @@
         \begin{align*}
             \mathcal{N}(q)
             & = \mathcal{H}(q_s + \delta q) - \mathcal{H}(q_s) \\
-            &= \frac12 \iint \sum_{i=1}^2 \left( \frac{1}{\alpha_i}\vec\nabla (\psi_{is} + \delta\psi_i) \cdot \vec\nabla (\psi_{is} + \delta\psi_i) + 2C_i(q_{is} + \delta q_i) \right) \\
+            &= \frac12 \iint \sum_{i=1}^2 \left( \frac{1}{\alpha_i}\vec\nabla (\psi_{is} + \delta\psi_i) \cdot \vec\nabla (\psi_{is} + \delta\psi_i) + 2C_i(q_{is} + \beta y + \delta q_i) \right) \\
             &\quad\quad + ((\psi_{1s} + \delta\psi_1) - (\psi_{2s} + \delta\psi_2))^2 \, dA \\
-            &\quad\quad - \left[ \frac12 \iint \sum_{i=1}^2 \left( \frac{1}{\alpha_i}\vec\nabla \psi_{is} \cdot \vec\nabla \psi_{is} + 2C_i(q_{is}) \right) + (\psi_{1s} - \psi_{2s})^2 \, dA \right] \\
+            &\quad\quad - \left[ \frac12 \iint \sum_{i=1}^2 \left( \frac{1}{\alpha_i}\vec\nabla \psi_{is} \cdot \vec\nabla \psi_{is} + 2C_i(q_{is} + \beta y) \right) + (\psi_{1s} - \psi_{2s})^2 \, dA \right] \\
             &= \frac12 \iint \sum_{i=1}^2 \frac{1}{\alpha_i} (2 \vec\nabla\delta\psi_i \cdot \vec\nabla\psi_{is} + \vec\nabla\delta\psi_i \cdot \vec\nabla\delta\psi_i) \\
             &\quad\quad + 2\psi_{1s}\delta\psi_1 + (\delta\psi_1)^2 + 2\psi_{2s}\delta\psi_2 + (\delta\psi_2)^2 - 2\psi_{1s}\delta\psi_2 - 2\delta\psi_1\psi_{2s} - 2\delta\psi_1\delta\psi_2 \, dA \\
-            &\quad\quad + \iint \sum_{i=1}^2 C_i(q_{is} + \delta q_i) - C_i(q_{is}) \, dA \\
+            &\quad\quad + \iint \sum_{i=1}^2 C_i(q_{is} + \beta y + \delta q_i) - C_i(q_{is} + \beta y) \, dA \\
             &= \frac12 \iint \sum_{i=1}^2 \frac{1}{\alpha_i} (2 \vec\nabla\delta\psi_i \cdot \vec\nabla\psi_{is} + \vec\nabla\delta\psi_i \cdot \vec\nabla\delta\psi_i) \\
             &\quad\quad + (\delta\psi_1 - \delta\psi_2)^2 + 2(\psi_{1s} - \psi_{2s})(\delta\psi_1 - \delta\psi_2) \, dA \\
-            &\quad\quad + \iint \sum_{i=1}^2 C_i(q_{is} + \delta q_i) - C_i(q_{is}) \, dA \\
+            &\quad\quad + \iint \sum_{i=1}^2 C_i(q_{is} + \beta y + \delta q_i) - C_i(q_{is} + \beta y) \, dA \\
             &= \frac12 \iint \sum_{i=1}^2 \frac{1}{\alpha_i} \vec\nabla\delta\psi_i \cdot \vec\nabla\delta\psi_i + (\delta\psi_1 - \delta\psi_2)^2 \\
-            &\quad\quad + \iint \sum_{i=1}^2 C_i(q_{is} + \delta q_i) - C_i(q_{is}) + \vec\nabla\delta\psi_i \cdot \vec\nabla\psi_{is} + \psi_{is}(\delta\psi_i - \delta\psi_{j \ne i}) \, dA \\
-            &= \frac12 \delta^2 H_s + \iint \sum_{i=1}^2 C_i(q_{is} + \delta q_i) - C_i(q_{is}) - \psi_{is}(\nabla^2\delta\psi_i - (\delta\psi_i - \delta\psi_{j \ne i})) \, dA \\
-            &= \frac12 \delta^2 H_s + \iint \sum_{i=1}^2 C_i(q_{is} + \delta q_i) - C_i(q_{is}) - \psi_{is}\delta q_i \, dA \\
-            &= \frac12 \delta^2 H_s + \iint \sum_{i=1}^2 C_i(q_{is} + \delta q_i) - C_i(q_{is}) - C'_i(q_{is})\delta q_i \, dA \\
+            &\quad\quad + \iint \sum_{i=1}^2 C_i(q_{is} + \beta y + \delta q_i) - C_i(q_{is} + \beta y) + \vec\nabla\delta\psi_i \cdot \vec\nabla\psi_{is} + \psi_{is}(\delta\psi_i - \delta\psi_{j \ne i}) \, dA \\
+            &= \frac12 \delta^2 H_s + \iint \sum_{i=1}^2 C_i(q_{is} + \beta y + \delta q_i) - C_i(q_{is}) - \psi_{is}(\nabla^2\delta\psi_i - (\delta\psi_i - \delta\psi_{j \ne i})) \, dA \\
+            &= \frac12 \delta^2 H_s + \iint \sum_{i=1}^2 C_i(q_{is} + \beta y + \delta q_i) - C_i(q_{is} + \beta y) - \psi_{is}\delta q_i \, dA \\
+            &= \frac12 \delta^2 H_s + \iint \sum_{i=1}^2 C_i(q_{is} + \beta y + \delta q_i) - C_i(q_{is} + \beta y) - C'_i(q_{is} + \beta y)\delta q_i \, dA \\
         \end{align*}
     \end{subsection}
 \end{section}
@@ -364,7 +354,7 @@
 \begin{section}{$N$-Layer Quasi-Geostrophy}
     The $N$-layer QG model can be written as,
     $$
-    \partial_t q_i + J(\psi_i, q_i) = 0,
+    \partial_t q_i + J(\psi_i, q_i + \beta y) = 0,
     $$
     for $i=1,...,N$ where the PV relations are given by:
     \begin{align*}
@@ -398,7 +388,7 @@
         \\
         \psi_N
         \end{array}\right] \\
-        \alpha_i &= \frac{f_0^2 \rho_0}{g (\rho_{i+1} - \rho_i) H_i}
+        \alpha_i &= \frac{f_0^2 \rho_0}{g (\rho_{i+1} - \rho_i) H_i} \text{(constant across all layers)}
     \end{align*}
 
     Assuming a flat bottom, just as in the two-layer case.
@@ -406,10 +396,10 @@
     \begin{subsection}{Hamiltonian}
         To derive an equation for the energy, we do as we did in the two-layer case.
         \begin{align*}
-        0 &= \iint \sum_{i=1}^N \psi_i \partial_t q_i + \psi_i J(\psi_i, q_i) \, dA \\
-        &= \iint \sum_{i=1}^N \psi_i \partial_t q_i + \frac12 J(\psi_i^2, q_i) \, dA \\
+        0 &= \iint \sum_{i=1}^N \psi_i \partial_t q_i + \psi_i J(\psi_i, q_i + \beta y) \, dA \\
+        &= \iint \sum_{i=1}^N \psi_i \partial_t q_i + \frac12 J(\psi_i^2, q_i + \beta y) \, dA \\
         &= \iint \sum_i \left[\partial_t(q_i \psi_i) - q_i \partial_t\psi_i \right] \, dA \\
-        &= .......... \\
+        &= ... \\
         &= \frac12 \iint \partial_t \left[ \sum_{i=1}^N \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \psi_i + \sum_{i=1}^{N-1} (\psi_i - \psi_{i+1})^2 \right]\, dA
         \end{align*}
 
@@ -420,27 +410,27 @@
         The canonical matrix is
         $$
         \mathbf{J} = \left[\begin{array}{ccc}
-        -J(q_1, \cdot) & & \\
+        -J(q_1 + \beta y, \cdot) & & \\
         & \ddots & \\
-        & & -J(q_n, \cdot)
+        & & -J(q_n + \beta y, \cdot)
         \end{array}\right]
         $$
         with the Casimirs being functions of the PV,
         $$
-        \mathcal{C}_i = \iint C_i(q_i) \, dA
+        \mathcal{C}_i = \iint C_i(q_i + \beta y) \, dA
         $$
         From this we form the constrained Hamiltonian
         \begin{equation}
-        \mathcal{H} = \frac12 \iint \sum_{i=1}^N \left[ \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \psi_i + 2C_i(q_i) \right] + \sum_{i=1}^{N-1} (\psi_i - \psi_{i+1})^2 \, dA
+        \mathcal{H} = \frac12 \iint \sum_{i=1}^N \left[ \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \psi_i + 2C_i(q_i + \beta y) \right] + \sum_{i=1}^{N-1} (\psi_i - \psi_{i+1})^2 \, dA
         \label{eqn:qg_Nl_h}
         \end{equation}
     \end{subsection}
 
     \begin{subsection}{First Variation}
         \begin{align*}
-        \delta \mathcal{H} &= \delta\frac12 \iint \sum_{i=1}^N \left[ \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \psi_i + 2C_i(q_i) \right] + \sum_{i=1}^{N-1} (\psi_i - \psi_{i+1})^2 \, dA \\
-        &= \iint \sum_{i=1}^N \left[ \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \delta\psi_i + C'_i(q_i) \delta q_i \right]+ \sum_{i=1}^{N-1} (\psi_i - \psi_{i+1})(\delta \psi_i - \delta \psi_{i+1}) \, dA \\
-        &= \iint \sum_{i=1}^N (-\psi_i + C'_i(q_i)) \delta q_i\, dA \\
+        \delta \mathcal{H} &= \delta\frac12 \iint \sum_{i=1}^N \left[ \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \psi_i + 2C_i(q_i + \beta y) \right] + \sum_{i=1}^{N-1} (\psi_i - \psi_{i+1})^2 \, dA \\
+        &= \iint \sum_{i=1}^N \left[ \frac{1}{\alpha_i} \vec\nabla \psi_i \cdot \vec\nabla \delta\psi_i + C'_i(q_i + \beta y) \delta q_i \right]+ \sum_{i=1}^{N-1} (\psi_i - \psi_{i+1})(\delta \psi_i - \delta \psi_{i+1}) \, dA \\
+        &= \iint \sum_{i=1}^N (-\psi_i + C'_i(q_i + \beta y)) \delta q_i\, dA \\
         \end{align*}
 
         $\delta \mathcal{H} = 0$ for steady solutions, and each $q_i$ is independent, so we have that in vector form
@@ -453,23 +443,21 @@
         \end{array}\right]
         =
         \left[\begin{array}{c}
-        C'_1(q_{1s}) \\
+        C'_1(q_{1s} + \beta y) \\
         \vdots \\
-        C'_N(q_{Ns})
+        C'_N(q_{Ns} + \beta y)
         \end{array}\right]
-        =
-        \vec C'(\vec q_s)
         \end{equation}
     \end{subsection}
 
     \begin{subsection}{Second Variation}
         The second variation for the $N$-layer model is
         \begin{align*}
-            \delta^2 \mathcal{H} &= \iint \sum_{i=1}^N \left[ - \psi_i + C'_i(q_i) \right]  \delta^2 q_i  - \delta \psi_i \delta q_i +  C''_i(q_i) (\delta q_i)^2  \, dA \\
-            \delta^2 \mathcal{H}_s &= \iint \sum_{i=1}^N \left[ - \psi_{is} + C'_i(q_{is}) \right]  \delta^2 q_i  - \delta \psi_i \delta q_i +  C''_i(q_{is}) (\delta q_i)^2  \, dA \\
-            &= \iint \sum_{i=1}^N - \delta \psi_i \delta q_i +  C''_i(q_{is}) (\delta q_i)^2  \, dA \\
-            &= \iint \sum_{i=1}^N \left[ \frac{1}{\alpha_i} \vec\nabla\delta\psi_i \cdot \vec\nabla\delta\psi_i + C''_i(q_{is}) (\delta q_i)^2 \right] + \sum_{i=1}^{N-1}(\delta\psi_i - \delta\psi_{i+1})^2 \, dA \\
-            &= \delta^2 H_s + \iint \sum_{i=1}^N C''_i(q_{is})(\delta q_i)^2 \, dA \\
+            \delta^2 \mathcal{H} &= \iint \sum_{i=1}^N \left[ - \psi_i + C'_i(q_i + \beta y) \right]  \delta^2 q_i  - \delta \psi_i \delta q_i +  C''_i(q_i + \beta y) (\delta q_i)^2  \, dA \\
+            \delta^2 \mathcal{H}_s &= \iint \sum_{i=1}^N \left[ - \psi_{is} + C'_i(q_{is} + \beta y) \right]  \delta^2 q_i  - \delta \psi_i \delta q_i +  C''_i(q_{is} + \beta y) (\delta q_i)^2  \, dA \\
+            &= \iint \sum_{i=1}^N - \delta \psi_i \delta q_i +  C''_i(q_{is} + \beta y) (\delta q_i)^2  \, dA \\
+            &= \iint \sum_{i=1}^N \left[ \frac{1}{\alpha_i} \vec\nabla\delta\psi_i \cdot \vec\nabla\delta\psi_i + C''_i(q_{is} + \beta y) (\delta q_i)^2 \right] + \sum_{i=1}^{N-1}(\delta\psi_i - \delta\psi_{i+1})^2 \, dA \\
+            &= \delta^2 H_s + \iint \sum_{i=1}^N C''_i(q_{is} + \beta y)(\delta q_i)^2 \, dA \\
         \end{align*}
 
         Which is exactly the same result as the two-layer case, but summing from 1 to $N$.
@@ -479,12 +467,12 @@
         \begin{subsubsection}{First Theorem}
             Our results for linear stability are thus identical to the results for the two-layer case.
             $$
-            C''_i(q_{is}) > 0, \quad i=1,...,N
+            C''_i(q_{is} + \beta y) > 0, \quad i=1,...,N
             $$
 
             If we assume that the steady solution only depends on latitude, $y$, then $\Psi_i = \Psi_i(y)$, and we have
             $$
-            U_{is} \frac{d Q_{is}}{dy} < 0, \quad i=1,...,N
+            U_{is} \left(\frac{d Q_{is}}{dy} + \beta \right) < 0, \quad i=1,...,N
             $$
         \end{subsubsection}
         \begin{subsubsection}{Second Theorem}
@@ -497,11 +485,11 @@
         \begin{align*}
             \mathcal{N}(q)
             & = \mathcal{H}(q_s + \delta q) - \mathcal{H}(q_s) \\
-            &= \frac12 \iint \sum_{i=1}^N \left( \frac{1}{\alpha_i}\vec\nabla (\psi_{is} + \delta\psi_i) \cdot \vec\nabla (\psi_{is} + \delta\psi_i) + 2C_i(q_{is} + \delta q_i) \right) \\
+            &= \frac12 \iint \sum_{i=1}^N \left( \frac{1}{\alpha_i}\vec\nabla (\psi_{is} + \delta\psi_i) \cdot \vec\nabla (\psi_{is} + \delta\psi_i) + 2C_i(q_{is} + \beta y + \delta q_i) \right) \\
             &\quad\quad + \sum_{i=1}^{N-1}((\psi_{is} + \delta\psi_i) - (\psi_{(i+1)s} + \delta\psi_{i+1}))^2 \, dA \\
-            &\quad\quad - \left[ \frac12 \iint \sum_{i=1}^N \left( \frac{1}{\alpha_i}\vec\nabla \psi_{is} \cdot \vec\nabla \psi_{is} + 2C_i(q_{is}) \right) + \sum_{i=1}^{N-1}(\psi_{is} - \psi_{(i+1)s})^2 \, dA \right] \\
-            &= \frac12 \delta^2 H_s + \iint \sum_{i=1}^N C_i(q_{is} + \delta q_i) - C_i(q_{is}) - \psi_{is}\delta q_i \, dA \\
-            &= \frac12 \delta^2 H_s + \iint \sum_{i=1}^N C_i(q_{is} + \delta q_i) - C_i(q_{is}) - C'_i(q_{is})\delta q_i \, dA \\
+            &\quad\quad - \left[ \frac12 \iint \sum_{i=1}^N \left( \frac{1}{\alpha_i}\vec\nabla \psi_{is} \cdot \vec\nabla \psi_{is} + 2C_i(q_{is} + \beta y) \right) + \sum_{i=1}^{N-1}(\psi_{is} - \psi_{(i+1)s})^2 \, dA \right] \\
+            &= \frac12 \delta^2 H_s + \iint \sum_{i=1}^N C_i(q_{is} + \beta y + \delta q_i) - C_i(q_{is} + \beta y) - \psi_{is}\delta q_i \, dA \\
+            &= \frac12 \delta^2 H_s + \iint \sum_{i=1}^N C_i(q_{is} + \beta y + \delta q_i) - C_i(q_{is} + \beta y) - C'_i(q_{is} + \beta y)\delta q_i \, dA \\
         \end{align*}
     \end{subsection}
 \end{section}
